# Housing-Property-Agent-MCP

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN-TEST.md  PROJECT.md  README-NEW-ARCHITECTURE.md  README.md  simple_test.py  start_demo.sh  test_workflow_creation.py  validate_system.py  verify_tenant_requests.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/public/: workflows.json
frontend/src/: App.tsx  index.css
k8s/: .gitignore  README.md  ingress.yaml  secrets.yaml  setup.sh
k8s/agent-mcp/: deployment.yaml  service.yaml
k8s/bff/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/identity/: deployment.yaml  service.yaml
k8s/orchestrator/: deployment.yaml  service.yaml
k8s/payment-service/: deployment.yaml  (+1 more)
server-mcp/: .gitignore  PLAN.md  README.md  TOOLS.md  master_server.py  pyproject.toml  server_config.json  sse_starlette.py
server-mcp/data/: schema.sql  seed.sql
server-mcp/mcp_servers/: mcp_filesystem_server.py  mcp_phone_tts_server.py  mcp_sequential_server.py  mcp_sqlite_server.py
server-mcp/scripts/: common.sh  create_maintenance_ticket.sh  get_rent_details_by_tenant_email.sh  list_due_payments.sh  list_tickets_by_tenant_email.sh  mark_payment_received.sh  test_chat.py  test_phone_tts.py
services/agent-mcp/: Dockerfile  main.py  pyproject.toml
services/agent-mcp/tests/: test_main.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
(+63 files in other folders)
